finished fixing the spacing issue

--- a/style.css
+++ b/style.css
@@ -196,4 +196,6 @@ footer {
     background-color: #ddd;
 }
 
-
+.inicio{
+    margin-bottom: 50 px;
+}
